--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   <h2 class="section-title">Sobre mí</h2>
   <div class="about-content">
     <p>
-      Soy estudiante de programación con muchas ganas de seguir aprendiendo 
+      Soy estudiante de programación en UTN-FRGP con muchas ganas de seguir aprendiendo 
       y mejorar día a día. Me interesa el desarrollo de <strong>diseño web</strong>, 
       
     </p>
