--- a/index.html
+++ b/index.html
@@ -399,8 +399,7 @@
   <h2 class="section-title">Sobre mí</h2>
   <div class="about-content">
     <p>
-      Soy estudiante de programación en UTN-FRGP con muchas ganas de seguir aprendiendo 
-      y mejorar día a día. Me interesa el desarrollo de <strong>diseño web</strong>, 
+      Estudiante de programación en la UTN-FRGP, enfocado en el desarrollo y diseño web, con una fuerte motivación por seguir creciendo y aprendiendo continuamente
       
     </p>
     <p>Realicé cursos de HTML, CSS Y JAVASCRIPT</p>
