--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="project-preview">
           <img src="images/dotnet-logo.png" alt="Vista previa del proyecto">
         </div>
-        <h3>Proyecto 2</h3>
+        <h3>Proyecto con Winforms</h3>
         <p>Proyecto en C# .NET </p>  
         <br>
         <br>  
